[SP-7037] Backport of PPP-6036 - CVE-2025-30065 - Schema parsing in the parquet-avro module allows arbitrary code (10.2 Suite)

--- a/shims/cdpdc71/kar/pom.xml
+++ b/shims/cdpdc71/kar/pom.xml
@@ -17,6 +17,24 @@
     <dependency>
       <groupId>org.pentaho.hadoop.shims</groupId>
       <artifactId>pentaho-hadoop-shims-common-dependencies-V1</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.hbase</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.hive</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.avro</groupId>
+          <artifactId>*</artifactId>
+        </exclusion>
+      </exclusions>
       <version>${project.version}</version>
     </dependency>
     <dependency>
