[PPP-6022] PPP-6022: Fix CVE-2025-59419 by replacing hbase-shaded-netty with pentaho-shaded-netty (Netty 4.1.128.Final) relocated to org.apache.hbase.thirdparty

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ pom.xml.releaseBackup
 checkstyle/
 .vscode
 .factorypath
+
+# Maven Shade Plugin generates this during build - should not be committed
+dependency-reduced-pom.xml
