--- a/shims/emr770/driver/pom.xml
+++ b/shims/emr770/driver/pom.xml
@@ -31,6 +31,7 @@
     <curator.version>5.6.0</curator.version>
     <slf4j.version>1.7.36</slf4j.version>
     <netty.version>4.1.128.Final</netty.version>
+    <xalan.version>2.7.3</xalan.version>
   </properties>
 
   <dependencies>
@@ -717,6 +718,10 @@
           <groupId>io.netty</groupId>
           <artifactId>netty-all</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>xalan</groupId>
+          <artifactId>xalan</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -988,6 +993,11 @@
       <groupId>at.yawk.lz4</groupId>
       <artifactId>lz4-java</artifactId>
       <version>${lz4-java.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>xalan</groupId>
+      <artifactId>xalan</artifactId>
+      <version>${xalan.version}</version>
     </dependency>
   </dependencies>
 
