[SP-7103] - Backport of PPP-6117 - CVE-2025-12183 | pdia-master has a security violation in lz4-java (11.0)

--- a/common-base/pom.xml
+++ b/common-base/pom.xml
@@ -614,6 +614,12 @@
       <version>1.2.22</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>at.yawk.lz4</groupId>
+      <artifactId>lz4-java</artifactId>
+      <version>${lz4-java.version}</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
   <build>
